data/derived/comb/progs/unify/prog7990.ml.out
Characters 448-493:
  | SumInts expr -> (eval(expr, x, y) *. (eval(expr, x, y) +. 1.0) / 2)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
